restructured web app

--- a/image-previewer/src/static/styles/main.css
+++ b/image-previewer/src/static/styles/main.css
@@ -1,13 +1,10 @@
-/* #header {
+
+/* 
+#header {
     background: #4895E5;
     align-content: right;
 }
 
-#header h1 {
-    font-weight: bold;
-    font-size: 2em;
-    color: whitesmoke;
-}
 #header label{
     display: block;
     font-size: 0.9em;
