Grr where is the image

--- a/image-previewer/src/static/styles/main.css
+++ b/image-previewer/src/static/styles/main.css
@@ -1,9 +1,15 @@
-.photo-box {
-    border-style: dashed;
+#header{
+    background-image: url("assets/header.jpg");
 }
+
+
 .body{
     padding-top: 2em;
     padding-bottom: 3em;
+}
+
+.photo-box {
+    border-style: dashed;
 }
 .footer{
     width: 100%;
