--- a/image-previewer/src/static/styles/main.css
+++ b/image-previewer/src/static/styles/main.css
@@ -1,3 +1,8 @@
+/* #header{
+    /* background-image: url("assets/header.jpg"); */
+    /* opacity: .7;
+ } */
+
 .body{
     padding-top: 2em;
     padding-bottom: 3em;
