--- a/image-previewer/src/static/styles/main.css
+++ b/image-previewer/src/static/styles/main.css
@@ -3,13 +3,12 @@
     /* opacity: .7;
  } */
 
-.body{
-    padding-top: 2em;
-    padding-bottom: 3em;
+.figure-img{
+    /* padding: 8px; */
+    size: max-width;
 }
-
-.photo-box {
-    border-style: dashed;
+.btn-space{
+    margin: 5px;
 }
 .footer{
     width: 100%;
