--- a/image-previewer/src/static/styles/main.css
+++ b/image-previewer/src/static/styles/main.css
@@ -3,14 +3,34 @@
     /* opacity: .7;
  } */
 
-.figure-img{
-    /* padding: 8px; */
-    size: max-width;
+.span6{
+    float: none; margin: 0 auto;
+}
+.dropzone {
+    width : 100%;
+    height : 80%;
+    border : 2px dashed black;
+    padding: 10px 200px;
+  }
+  
+.dropzone:hover {
+    cursor: pointer;
+    background-color: #EEEE;    
+}
+    
+.list-group-item:hover{
+    background-color: #EEEE;
 }
 
+.figure-img:hover{
+    opacity: 0.7;
+    background-color:#000;
+    cursor: pointer;
+}
 .footer{
     width: 100%;
     height: 60px;
     line-height: 60px;
+    bottom:0;
     background-color: #f5f5f5;
 }
