--- a/image-previewer/src/static/styles/main.css
+++ b/image-previewer/src/static/styles/main.css
@@ -12,7 +12,7 @@
     border : 2px dashed black;
     padding: 10px 200px;
   }
-  
+
 .dropzone:hover {
     cursor: pointer;
     background-color: #EEEE;    
@@ -22,11 +22,15 @@
     background-color: #EEEE;
 }
 
+.flex-item{
+    justify-content: space-between; 
+}
 .figure-img:hover{
     opacity: 0.7;
     background-color:#000;
     cursor: pointer;
 }
+
 .footer{
     width: 100%;
     height: 60px;
