--- a/image-previewer/src/static/styles/main.css
+++ b/image-previewer/src/static/styles/main.css
@@ -3,19 +3,41 @@
     /* opacity: .7;
  } */
 
+ html {
+    height: 100%;
+    box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body {
+    position: relative;
+    margin: 0;
+    padding-bottom: 6rem;
+    min-height: 100%;
+    font-family: "Helvetica Neue", Arial, sans-serif;
+}
+
 .span6{
     float: none; margin: 0 auto;
 }
+
 .dropzone {
     width : 100%;
     height : 80%;
-    border : 2px dashed black;
+    border : 2px dashed transparent;
     padding: 10px 200px;
+    background-color: #ec5252;
+    -webkit-text-fill-color: white;
   }
 
 .dropzone:hover {
     cursor: pointer;
-    background-color: #EEEE;    
+    background-color: rgba(168, 16, 16, 0.933);    
 }
     
 .list-group-item:hover{
@@ -23,15 +45,18 @@
 }
 
 .figure-img:hover{
-    opacity: 0.7;
-    background-color:#000;
+    opacity: 0.95;
     cursor: pointer;
+    box-shadow: 3px 3px 5px 6px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
+    
 }
 
-.footer{
-    width: 100%;
-    height: 60px;
-    line-height: 60px;
-    bottom:0;
+.footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
     background-color: #f5f5f5;
-}
+    text-align: center;
+  }
