--- a/image-previewer/src/styles/main.css
+++ b/image-previewer/src/styles/main.css
@@ -1,9 +1,4 @@
-/* #header{
-    /* background-image: url("assets/header.jpg"); */
-    /* opacity: .7;
- } */
-
- html {
+html {
     height: 100%;
     box-sizing: border-box;
 }
@@ -30,7 +25,7 @@ body {
     width : 100%;
     height : 80%;
     border : 2px dashed transparent;
-    padding: 10px 200px;
+    padding: 10px 150px;
     background-color: #ec5252;
     -webkit-text-fill-color: white;
   }
@@ -46,8 +41,9 @@ body {
 
 .figure-img:hover{
     opacity: 0.95;
-    cursor: pointer;
-    box-shadow: 3px 3px 5px 6px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
+    filter: brightness(70%);
+    cursor: crosshair;
+    box-shadow: 3px 3px 3px 4px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
     
 }
 
@@ -59,4 +55,14 @@ body {
     padding: 1rem;
     background-color: #f5f5f5;
     text-align: center;
+  }
+  .hover-btn {
+     position: absolute;
+     left: -5px;
+     top: -10px;
+     display: none;
+  }
+
+  .list-group-item:hover .hover-btn {
+     display: block;
   }
